kube/services/netpolicy/networkpolicy_aws_es_proxy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-aws-es-proxy
spec:
  podSelector:
    matchLabels:
      app: esproxy
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: arranger
      ports:
         - port: 9200
  egress:
    - to:
      - ipBlock:
           cidr: 0.0.0.0/0
  policyTypes:
   - Ingress
   - Egress
